<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/loginprogress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_height="wrap_content" />
        
        <EditText
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/email_signin_button"
            android:layout_width="match_parent"
            android:textColor="@color/colorAccent"
            android:text="@string/login_text"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/email_signup_button_login"
            android:layout_width="match_parent"
            android:textColor="@color/colorAccent"
            android:text="@string/create_text"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"/>



    </LinearLayout>

</LinearLayout>