<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_text"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/grateful"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text ="@string/gratefultext"
                android:textSize="19sp"
                android:layout_height="wrap_content"
                />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:text="@string/getstartedtext"
        android:textColor="@color/colorAccent"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>